--- a/FruitSellerApplication-Frontend -NextJS/package.json
+++ b/FruitSellerApplication-Frontend -NextJS/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
+    "@mui/styles": "^5.14.13",
     "@tanstack/react-query": "^4.35.7",
     "@tanstack/react-query-devtools": "^4.35.7",
     "axios": "^1.5.1",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "next": "latest",
